--- a/style.css
+++ b/style.css
@@ -65,10 +65,47 @@ header h1 {
 .preview {
   margin: 2rem auto;
   width: 100%;
+  padding: 1rem;
   aspect-ratio: 16/9;
   background-color: #d4d4d4;
 }
 
+.content_list {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  text-align: center;
+}
+
+.title {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3.5rem;
+  font-weight: 500;
+}
+
+.subtitle {
+  position: absolute;
+  display: inline-block;
+  top: 62%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  border-top: 1px solid #ffffff;
+  padding-top: 5px;
+}
+
+.subject {
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+}
 
 /* management */
 
