--- a/style.css
+++ b/style.css
@@ -209,3 +209,17 @@ input::placeholder {
   width: 3rem;
   height: 3rem;
 }
+
+/* modal */
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -54%);
+  z-index: 100;
+}
