--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'HBIOS-SYS';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/HBIOS-SYS.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +34,7 @@ body {
   height: 100%;
   cursor: default;
   padding: 4rem 8rem;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Pretendard-Regular';
   color:#666666;
   font-weight: bold;
   max-width: 1024px;
@@ -58,8 +72,8 @@ header h1 {
   font-size: 2rem;
   color: #343A40;
   font-weight: 800;
+  font-family: 'HBIOS-SYS';
 }
-
 
 /* preview */
 
@@ -69,6 +83,7 @@ header h1 {
   padding: 1rem;
   aspect-ratio: 16/9;
   background-color: #d4d4d4;
+  font-family: 'Pretendard-Regular';
 }
 
 .content_list {
@@ -86,17 +101,16 @@ header h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   font-weight: 500;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
 }
-
 
 .subtitle {
   position: absolute;
   display: inline-block;
-  top: 62%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: 1.45rem;
   border-top: 1px solid #ffffff;
   padding-top: 5px;
 }
@@ -106,13 +120,17 @@ header h1 {
   top: 95%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 /* management */
 
 .management {
   margin: 2rem 0 0;
+}
+
+.management__menu {
+  font-family: 'HBIOS-SYS';
 }
 
 .inputs {
