--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ header h1 {
   display: block;
   top: 50%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
   font-weight: 500;
   font-size: 3.2rem;
